# ChangeLog for www-client/google-chrome-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header$

*google-chrome-bin-5.0.375.3_p44229 (15 Apr 2010)
*google-chrome-bin-5.0.342.9_p43360 (15 Apr 2010)

  15 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +google-chrome-bin-5.0.342.9_p43360.ebuild,
  +google-chrome-bin-5.0.375.3_p44229.ebuild, +metadata.xml:
  WIP ebuilds for real Google Chrome, in my overlay for now
