@@ -1,8 +1,5 @@
-DIST google-chrome-beta_5.0.342.9-r43360_amd64.deb 14160618 RMD160 8d7f45c5c56849dac324b5e4e177375ee5a0aaf8 SHA1 708931bc5abb7a04bc55ef553135376cf35f0ca8 SHA256 85499053999936dedb9a19bb318b739862cafb258cc5a475f10ee285012cda00
-DIST google-chrome-beta_5.0.342.9-r43360_i386.deb 13414792 RMD160 6474c964f20f157103032346876be917517380ce SHA1 fdf91e51a357032a2c84044d5273f8e8cbc2b0f8 SHA256 197c1f3cb8554094c188317ffe2a64a736311bff44a4b040db047902770e0d52
-DIST google-chrome-unstable_5.0.375.9-r44625_amd64.deb 14831264 RMD160 d1d9b47a1d2dc3ecb004b7d38df1074c6eda2912 SHA1 825d34cd3328c0a8baba8a5be443e69f80ee9e7f SHA256 45d3ea2f306dc82b2095a4720e9a34394a3ca5502fe77c4e19a3dc8677df4793
-DIST google-chrome-unstable_5.0.375.9-r44625_i386.deb 17586454 RMD160 fc7d9d8cafec3a2b074d69eb98ad70a533ce6255 SHA1 823d6cf8f419ba303604c4ae14eab44de163250c SHA256 986b16bac3a2e3bddc152ab8cfc2b19e11b60a1ce503cd0d4094f97603cfb20a
-EBUILD google-chrome-bin-5.0.342.9_p43360.ebuild 4889 RMD160 1f79bc23371a78952754d5bdba31cde02dd39837 SHA1 3f58f651d5fe4b0d7cf0da0db203b793ce7947dc SHA256 6ca9223de3690ac45f36596c096e667008a083c0b2a7c17ddf6b17df8e98bdf0
-EBUILD google-chrome-bin-5.0.375.9_p44625.ebuild 4889 RMD160 0c9c315716c57da0dd9112df6b6b57b631ae2e12 SHA1 aa9ca0da21f3c133c1ee83f1cfc354dce0e55eed SHA256 b3261a0a63a6e525d87b79bbadd6a95ea549bce003eac60d14ec12b00ed19261
-MISC ChangeLog 451 RMD160 cdfc520d5fead2fa2a4550bc62bb76f0e5e8a6dc SHA1 b8d273fc3cc2a3487b2a8344e093997f84807d29 SHA256 999707271ba3bae598f9e9149cef7d4c7f29ac11d0dc6cd1795cd8b606d165f9
+DIST google-chrome-stable_5.0.375.55-r47796_amd64.deb 15266350 RMD160 03c68ff228a4ffaa1bc9c62b073953bffca7c4e6 SHA1 c8c5bdb80e3ac2a08126c507c32cecb694e2f274 SHA256 8cf68655064bdde443450ecb5aee3c12040dc88a085604e49eacf8ab60ead0a1
+DIST google-chrome-stable_5.0.375.55-r47796_i386.deb 18032058 RMD160 98b58b8ccc80fade7d61910c3fdb5c8c24c75283 SHA1 1eda4d690a8518deed2bab783b209c78be6420a8 SHA256 dacfe23f570d2eaed803d2e1f21b6e1bc968446c4e40df0cae1f7835afb666cc
+EBUILD google-chrome-bin-5.0.375.55_p47796.ebuild 4853 RMD160 9267c96e6142f3f27830be1ecbec1aa7a185dd2a SHA1 cbf4b444a22f7447c11ed22decde412bfeae1074 SHA256 1ad374e7257319424f1e3c60d5ab7130782019c001a2215d7aeda3d4af44bea1
+MISC ChangeLog 772 RMD160 e758cf6ed5c1485fbd4c89229a145aaf8166a257 SHA1 5c629a693a55b242dfae49cd867c5804e2a4c8fa SHA256 4502a056a1c6811b88600ec6a9eae6249a70f4842a70a165038e40e6938eed80
 MISC metadata.xml 663 RMD160 55e4f9be8a7e2d9ddc548af70f4291d6d669b96a SHA1 457ec532de15f289e5f8b6e0e731276c1b7db79a SHA256 2a84aac1dba3edeb22805905c218557ee6309be9c531fb20b100b7cc6cdd44ff
